--- a/index.html
+++ b/index.html
@@ -84,42 +84,46 @@
 
         <!--BC-->
         <div id="birou-de-conducere">
-            <div class="container d-flex flex-column justify-content-between ">
+            <div class="container">
                 <h2>
                     Birou de conducere
                 </h2>
-                <!---->
-                <div class="row mt-5 d-flex justify-content-around">
+                <div class="row">
 
-                    <div class="card">
-                        <img src="./Image/Președinte.jpg" class="card-img-top" alt="Un cățel drăguț">
-                        <div class="card-body">
-                            <span class="badge rounded-pill text-bg-primary">Șef</span>
-                            <h3 class="card-title text-white">Președinte</h3>
-                            <p class="card-text text-white">Președintele este reprezentatul studenților în facultate
-                                                              și are rolul de a se asigura de bunul mers al organizației și bunăstarea voluntarilor.
-                            </p>
+                    <div class="col-md-4 col-sm-12">
+                        <div class="card">
+                            <img src="./Image/Președinte.jpg" class="card-img-top" alt="Un cățel drăguț">
+                            <div class="card-body">
+                                <span class="badge rounded-pill text-bg-primary">Șef</span>
+                                <h3 class="card-title text-white">Președinte</h3>
+                                <p class="card-text text-white">Președintele este reprezentatul studenților în facultate și are rolul de a se asigura de bunul mers al organizației și bunăstarea voluntarilor.
+                                </p>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="card">
-                        <img src="./Image/CEO.jpg" class="card-img-top" alt="Incă un cățel drăguț">
-                        <div class="card-body">
-                            <span class="badge rounded-pill text-bg-primary">Șef Mic</span>
-                            <h3 class="card-title text-white">Director Executiv</h3>
-                            <p class="card-text text-white">Directorul executiv se ocupă de partea din spate a organizație, cum ar fii sponsorizări, cheltuieli, facturi și cam tot ce ține de fondurile organizației.</p>
+                    <div class="col-md-4 col-sm-12">
+                        <div class="card">
+                            <img src="./Image/CEO.jpg" class="card-img-top" alt="Incă un cățel drăguț">
+                            <div class="card-body">
+                                <span class="badge rounded-pill text-bg-primary">Șef Mic</span>
+                                <h3 class="card-title text-white">Director Executiv</h3>
+                                <p class="card-text text-white">Directorul executiv se ocupă de partea din spate a organizație, cum ar fii sponsorizări, cheltuieli, facturi și cam tot ce ține de fondurile organizației.</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="card">
-                        <img src="./Image/RELAȚII EXTERNE.jpg" class="card-img-top" alt="Alt cățel drăguț">
-                        <div class="card-body">
-                            <span class="badge rounded-pill text-bg-primary">Șef extern</span>
-                            <h3 class="card-title text-white">Relații Externe</h3>
-                            <p class="card-text text-white">Responsabilul de relații externe reprezintă organizația în exteriorul facultății, printre alte organizații și se asigură că imaginea organizației nu este una universității proastă.</p>
+
+                    <div class="col-md-4 col-sm-12">
+                        <div class="card">
+                            <img src="./Image/RELAȚII EXTERNE.jpg" class="card-img-top" alt="Alt cățel drăguț">
+                            <div class="card-body">
+                                <span class="badge rounded-pill text-bg-primary">Șef extern</span>
+                                <h3 class="card-title text-white">Relații Externe</h3>
+                                <p class="card-text text-white">Responsabilul de relații externe reprezintă organizația în exteriorul facultății, printre alte organizații și se asigură că imaginea organizației nu este una universității proastă.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-5 d-flex justify-content-between"></div>
             </div>
         </div>
 
